kubernetes/zwavejs2mqtt/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: zwavejs2mqtt
  name: web-interface
spec:
  selector:
    app: zwavejs2mqtt
  ports:
    - port: 8091
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: zwavejs2mqtt
  name: websocket-svr
spec:
  selector:
    app: zwavejs2mqtt
  ports:
    - port: 3000
