kubernetes/zwavejs2mqtt/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zwavejs2mqtt
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - zwave.gregrapp.net
      secretName: zwavejs2mqtt-tls
  rules:
    - host: zwave.gregrapp.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-interface
                port:
                  number: 8091
